crates/pcb-star-core/tests/snapshots/input__interface_multiple_net_templates.snap
---
source: crates/pcb-star-core/tests/input.rs
expression: output
---
Module {
    name: "<root>",
    source: "test.star",
    children: [
        FrozenValue(
            Component {
                name: "U1",
                type: "mcu",
                footprint: "QFN:32",
                prefix: "U",
                pins: {
                    "EN": FrozenValue(
                        "3",
                    ),
                    "GND": FrozenValue(
                        "2",
                    ),
                    "VCC": FrozenValue(
                        "1",
                    ),
                },
                connections: {
                    "EN": FrozenValue(
                        Net {
                            name: "MCU_EN",
                            id: "<ID>",
                        },
                    ),
                    "GND": FrozenValue(
                        Net {
                            name: "MCU_GND",
                            id: "<ID>",
                        },
                    ),
                    "VCC": FrozenValue(
                        Net {
                            name: "MCU_3V3",
                            id: "<ID>",
                        },
                    ),
                },
                properties: {
                    "symbol_path": FrozenValue(
                        NoneType,
                    ),
                },
            },
        ),
        FrozenValue(
            Component {
                name: "U2",
                type: "sensor",
                footprint: "SOT:23-6",
                prefix: "U",
                pins: {
                    "ENABLE": FrozenValue(
                        "3",
                    ),
                    "VDD": FrozenValue(
                        "1",
                    ),
                    "VSS": FrozenValue(
                        "2",
                    ),
                },
                connections: {
                    "ENABLE": FrozenValue(
                        Net {
                            name: "SENSOR_EN",
                            id: "<ID>",
                        },
                    ),
                    "VDD": FrozenValue(
                        Net {
                            name: "SENSOR_3V3",
                            id: "<ID>",
                        },
                    ),
                    "VSS": FrozenValue(
                        Net {
                            name: "SENSOR_GND",
                            id: "<ID>",
                        },
                    ),
                },
                properties: {
                    "symbol_path": FrozenValue(
                        NoneType,
                    ),
                },
            },
        ),
    ],
}
[]
