crates/pcb-star-core/tests/snapshots/input__interface_nested_template.snap
---
source: crates/pcb-star-core/tests/input.rs
expression: output
---
Module {
    name: "<root>",
    source: "test.star",
    children: [
        FrozenValue(
            Component {
                name: "J1",
                type: "usb_connector",
                footprint: "USB:TYPE-C",
                prefix: "U",
                pins: {
                    "D+": FrozenValue(
                        "2",
                    ),
                    "D-": FrozenValue(
                        "3",
                    ),
                    "GND": FrozenValue(
                        "4",
                    ),
                    "VBUS": FrozenValue(
                        "1",
                    ),
                },
                connections: {
                    "D+": FrozenValue(
                        Net {
                            name: "PORT1_D+",
                            id: "<ID>",
                        },
                    ),
                    "D-": FrozenValue(
                        Net {
                            name: "PORT1_D-",
                            id: "<ID>",
                        },
                    ),
                    "GND": FrozenValue(
                        Net {
                            name: "PORT1_POWER_GND",
                            id: "<ID>",
                        },
                    ),
                    "VBUS": FrozenValue(
                        Net {
                            name: "PORT1_POWER_VCC",
                            id: "<ID>",
                        },
                    ),
                },
                properties: {
                    "symbol_path": FrozenValue(
                        NoneType,
                    ),
                },
            },
        ),
    ],
}
[]
